# AppManager

./: README-TR.md  README.md  Tanım.md  meson.build
data/: meson.build  resources.gresource.xml
data/ui/: about.blp  details_dialog.blp  main-window.blp  preferences.blp  welcome-tour.blp  window.blp
include/: adb.h  app.h  utils.h  window.h
src/: adb.c  app.c  main.c  meson.build  utils.c  window.c
